feat: update angular example

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "postinstall": "npm run update-sdk",
     "update-sdk": "node bin/setup.js",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "merge-addons": "gulp merge-addons",
+    "start": "npm run merge-addons && ng serve",
+    "build": "npm run merge-addons && ng build",
+    "test": "npm run merge-addons && ng test",
     "lint": "set NODE_OPTIONS=--max-old-space-size=8192 && ng lint",
     "e2e": "ng e2e"
   },
@@ -29,11 +30,13 @@
     "@angular/cli": "~8.3.6",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
+    "@foxitsoftware/gulp-merge-addon": "^0.7.3-alpha5",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "fs-extra": "^8.1.0",
+    "gulp": "^4.0.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
