--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "foxit-pdf-sdk-for-web-angular-example",
   "version": "0.1.0",
   "scripts": {
-    "preinstall": "npm i -S @foxitsoftware/foxit-pdf-sdk-for-web-library",
+    "preinstall": "npm i -S @foxitsoftware/foxit-pdf-sdk-for-web-library@8.2.0",
     "merge-addons": "gulp merge-addons",
     "start": "npm run merge-addons && ng serve",
     "build": "npm run merge-addons && node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build",
@@ -29,7 +29,7 @@
     "@angular/cli": "~8.3.6",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
-    "@foxitsoftware/gulp-merge-addon": "^0.7.4",
+    "@foxitsoftware/gulp-merge-addon": "^0.7.6",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
