--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "foxit-pdf-sdk-for-web-angular-example",
   "version": "0.1.0",
   "scripts": {
-    "preinstall": "npm i -S @foxitsoftware/foxit-pdf-sdk-for-web-library@8.2.0",
     "merge-addons": "gulp merge-addons",
     "start": "npm run merge-addons && ng serve",
     "build": "npm run merge-addons && node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build",
@@ -20,6 +19,7 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "@foxitsoftware/foxit-pdf-sdk-for-web-library": "~8.2.0"
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
